--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: EkulTails
-description: 'Luke Short - Cloud Architect, open source advocate, Linux gamer, Chromebook enthusiast, Star Wars fan, vegan, and a proud citizen of Colorado.'
+description: 'Luke Short - Cloud Architect, developer, open source advocate, Linux gamer, Chromebook enthusiast, Star Wars fan, vegan, and a proud citizen of Colorado.'
 url: 'https://ekultails.com'
 #baseurl: ''
 # google_analytics: 'UA-XXXXXX-X'
