--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ url: 'https://ekultails.com'
 author:
   name: 'Luke Short'
   email: ekultails@gmail.com
-#  twitter_username:
+  twitter_username: ekultails
 #  facebook_username:
   github_username: ekultails
   linkedin_username: luke-short-68872813a
