--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: EkulTails
+title: '@LukeShortCloud'
 description: 'Luke Short - Senior Kubernetes Solutions Architect, developer, open source advocate, Linux gamer, Chromebook enthusiast, Star Wars fan, vegan, and proud citizen of Colorado.'
 url: 'https://ekultails.com'
 #baseurl: ''
